--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "eigen"]
-	path = eigen
+[submodule "libs/eigen-3.4.0"]
+	path = libs/eigen-3.4.0
 	url = https://github.com/ValveSoftware/eigen
